--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="row">
           <div id="container-shirt-1" class="col-sm-6 col-lg-3">
             <div class="thumbnail">
-              <img src="assets/images/polera1.jpg" alt="...">
+            <img src="assets/images/polera1.jpg" alt="...">
               <div class="caption">
                 <h4 class="name">Polera - Björk – Debut</h4>
                 <hr>
@@ -89,12 +89,8 @@
           </div>
 
           <div id="container-shirt-1" class="col-sm-6 col-lg-3">
-            <div class="thumbnail">
-              <img src="assets/images/polera2.jpg" alt="...">
-              <div class="caption">
-                <h4 class="name">Polera - Björk – Debut</h4>
-                <hr>
-                <h5>$13.990</h5>
+            <div class="thumbnail1">
+
                 <!-- <hr> -->
                 <!--<p>Debut es el segundo álbum de estudio de la cantautora islandesa Björk, lanzado en julio de 1993 por el sello
                 One Little Indian en el Reino Unido y Elektra en los Estados Unidos. Björk trabajó en el álbum con el productor
@@ -244,10 +240,9 @@
   <script src="https://use.fontawesome.com/de7a47ff86.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
-  <script src="assets/js/data.js" charset="utf-8"></script>
+  <script src="assets/js/data.json" charset="utf-8"></script>
   <script src="assets/js/firebase.js" charset="utf-8"></script>
 </body>
 
