--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-inverse navbar-default">
+  <nav class="navbar navbar-inverse navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -28,16 +28,44 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
+          <!-- The Modal -->
+          <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div  class="modal-content">
+              <span class="close">&times;</span>
+              <div id="modal-registro" class="row">
+                <div class="col-lg-12">
+                  <h4>Registro de usuario</h4>
+                  <input id="email" placeholder="ingresa email" type="email" name="" value="">
+                  <input id="password" placeholder="Ingresa contraseña" type="password" name="" value="">
+                  <button onclick="Register()" type="button" name="button" id="btn-registro">Enviar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <li>
-            <a href="#">POLERAS</a>
+            <a href="#"><i class="fa fa-shopping-cart"></i></a>
           </li>
-          <li>
-            <a href="#">
-              <i class="fa fa-shopping-cart"></i>
-            </a>
-          </li>
+
           <li>
             <a href="#">0</a>
+          </li>
+
+          <li>
+            <a class"item-ingreso-nav" id="myBtn" href="#">REGÍSTRATE</a>
+          </li>
+
+          <li id="ingreso-usuario">
+            <p class="item-ingreso-nav" >INGRESO DE USUARIO</p>
+            <input id="emails" placeholder="ingresa email" type="email" name="" value="">
+            <input id="passwords" placeholder="Ingresa contraseña" type="password" name="" value="">
+            <button id="btn-inicio" onclick="Ingress()" type="button" name="button">Acceder</button>
+          </li>
+
+          <li>
+            <div id="content"></div>
           </li>
         </ul>
       </div>
@@ -46,7 +74,8 @@
     <!-- /.container-fluid -->
   </nav>
 
-<!-- lOGIN 
+<!-- lOGIN-
+
   <section>
     <div class="row">
       <div class="col-sm-6">
@@ -64,107 +93,29 @@
     </div>
     <div id="content">
     </div>
-  </section>
--->
+  </section>-->
 
-<<<<<<< HEAD
+  <!-- productos -->
   <section>
     <div id="container-all-shirts" class="row">
       <div class="col-12-lg">
         <div class="row">
           <div id="container-shirt-1" class="col-sm-6 col-lg-3">
-            <div class="thumbnail">
-            <img src="assets/images/polera1.jpg" alt="...">
-              <div class="caption">
-                <h4 class="name">Polera - Björk – Debut</h4>
-                <hr>
-                <h5>$13.990</h5>
-                <!-- <hr> -->
-                <!--<p>Debut es el segundo álbum de estudio de la cantautora islandesa Björk, lanzado en julio de 1993 por el sello One Little Indian
-                en el Reino Unido y Elektra en los Estados Unidos. Björk trabajó en el álbum con el productor Nellee Hooper, quien co-escribió
-                cinco de las canciones de Debut con ella</p> -->
-
-                <!-- <a href="#" class="btn btn-primary" role="button">Button</a>
-                <a href="#" class="btn btn-default" role="button">Button</a> -->
+            <div class="thumbnails">
+              <!-- PRODUCTOS -->
               </div>
             </div>
           </div>
-
-          <div id="container-shirt-1" class="col-sm-6 col-lg-3">
-            <div class="thumbnail1">
-
-                <!-- <hr> -->
-                <!--<p>Debut es el segundo álbum de estudio de la cantautora islandesa Björk, lanzado en julio de 1993 por el sello
-                One Little Indian en el Reino Unido y Elektra en los Estados Unidos. Björk trabajó en el álbum con el productor
-                Nellee Hooper, quien co-escribió cinco de las canciones de Debut con ella</p> -->
-
-                <!-- <a href="#" class="btn btn-primary" role="button">Button</a>
-                <a href="#" class="btn btn-default" role="button">Button</a> -->
-              </div>
-            </div>
-          </div>
-
-          <div id="container-shirt-1" class="col-sm-6 col-lg-3">
-            <div class="thumbnail">
-              <img src="assets/images/polera3.jpg" alt="...">
-              <div class="caption">
-                <h4 class="name">Polera - Björk – Debut</h4>
-                <hr>
-                <h5>$13.990</h5>
-                <!-- <hr> -->
-                <!--<p>Debut es el segundo álbum de estudio de la cantautora islandesa Björk, lanzado en julio de 1993 por el sello
-                One Little Indian en el Reino Unido y Elektra en los Estados Unidos. Björk trabajó en el álbum con el productor
-                Nellee Hooper, quien co-escribió cinco de las canciones de Debut con ella</p> -->
-
-                <!-- <a href="#" class="btn btn-primary" role="button">Button</a>
-                <a href="#" class="btn btn-default" role="button">Button</a> -->
-              </div>
-            </div>
-          </div>
-
-          <div id="container-shirt-1" class="col-sm-6 col-lg-3">
-            <div class="thumbnail">
-              <img src="assets/images/polera3.jpg" alt="...">
-              <div class="caption">
-                <h4 class="name">Polera - Björk – Debut</h4>
-                <hr>
-                <h5>$13.990</h5>
-                <!-- <hr> -->
-                <!--<p>Debut es el segundo álbum de estudio de la cantautora islandesa Björk, lanzado en julio de 1993 por el sello
-                One Little Indian en el Reino Unido y Elektra en los Estados Unidos. Björk trabajó en el álbum con el productor
-                Nellee Hooper, quien co-escribió cinco de las canciones de Debut con ella</p> -->
-
-                <!-- <a href="#" class="btn btn-primary" role="button">Button</a>
-                <a href="#" class="btn btn-default" role="button">Button</a> -->
-              </div>
-            </div>
-          </div>
-
-          <div id="container-shirt-1" class="col-sm-6 col-lg-3">
-            <div class="thumbnail">
-              <img src="assets/images/polera3.jpg" alt="...">
-              <div class="caption">
-                <h4 class="name">Polera - Björk – Debut</h4>
-                <hr>
-                <h5>$13.990</h5>
-                <!-- <hr> -->
-                <!--<p>Debut es el segundo álbum de estudio de la cantautora islandesa Björk, lanzado en julio de 1993 por el sello
-                One Little Indian en el Reino Unido y Elektra en los Estados Unidos. Björk trabajó en el álbum con el productor
-                Nellee Hooper, quien co-escribió cinco de las canciones de Debut con ella</p> -->
-
-                <!-- <a href="#" class="btn btn-primary" role="button">Button</a>
-                <a href="#" class="btn btn-default" role="button">Button</a> -->
-=======
-<!--productos-->
+        </div>
+      </div>
+    </section>
 
 <!-- imagenes&paypal-->
-  <section>
-    
-          <div class="rom">
-            <div id="container-shirt-1" class="col-sm-6 col-lg-3">
-              <div class="thumbnail">
+<section>
+  <div class="rom">
+    <div id="container-shirt-1" class="col-sm-6 col-lg-3">
+      <div class="thumbnail">
                 <img src="assets/images/polera2.jpg" alt="...">
-
                 <div class="caption row">
                   <div class="col-sm-12">
                     <h4 class="name">Polera - Björk – Debut</h4>
@@ -172,7 +123,7 @@
                 </div>
 
                 <div class="row">
-                  <div class="col-sm-5 ">
+                  <div class="col-sm-5">
                     <div class="paypal">
                       <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
                           <input type="hidden" name="cmd" value="_s-xclick">
@@ -181,7 +132,7 @@
                           <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
                       </form>
                     </div>
-                  </div>   
+                  </div>
                   <div class="col-sm-3">
                     <div class="carrito">
                      <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" >
@@ -193,10 +144,9 @@
                       </form>
 
 
-                    </div> 
+                    </div>
                   </div>
                 </div>
->>>>>>> upstream/master
               </div>
             </div>
           </div>
@@ -221,7 +171,7 @@
                           <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
                       </form>
                     </div>
-                  </div>   
+                  </div>
                   <div class="col-sm-3">
                     <div class="carrito">
                      <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" >
@@ -233,7 +183,7 @@
                         </form>
 
 
-                    </div> 
+                    </div>
                   </div>
                 </div>
               </div>
@@ -260,7 +210,7 @@
                           <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
                       </form>
                     </div>
-                  </div>   
+                  </div>
                   <div class="col-sm-3">
                     <div class="carrito">
                      <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" >
@@ -272,7 +222,7 @@
                       </form>
 
 
-                    </div> 
+                    </div>
                   </div>
                 </div>
               </div>
@@ -309,9 +259,9 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="assets/js/app.js"></script>
   <script src="assets/js/data.json" charset="utf-8"></script>
   <script src="assets/js/firebase.js" charset="utf-8"></script>
+  <script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 
 </html>
